<resources>
    <string name="app_name">PhLog</string>
    <string name="please_wait_facebooklogin">Please Wait</string>
    <string name="login_canceled_facebooklogin">FaceBook Login Canceled</string>
    <string name="login_failed_facebooklogin">FaceBook Login Failed</string>
    <string name="send_feed_back">Send Feed Back</string>
    <string name="client_email_feedback_subject">client_feed_back</string>
    <string name="general_gallery_chooser_title">Select Picture:</string>
    <string name="general_photo_chooser_camera">Camera</string>
    <string name="general_photo_chooser_gallery">Gallery</string>
    <string name="general_photo_chooser_title">Upload picture</string>
    <string name="map_fragment_open_gps">Please open Gps</string>
    <string name="map_fragment_yes">Enable Gps</string>
    <string name="map_fragment_no">No Gps</string>
    <string name="map_fragment_unspecified_user_location">UnSpecified userLocation</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="create_an_account">Create an account</string>
    <string name="full_name">Name</string>
    <string name="password">Password</string>
    <string name="user_name">Username</string>
    <string name="mail">Email</string>
    <string name="country">Country</string>
    <string name="mobile">Mobile</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up_terms_notifier">By creating an account you are agree to our user agreement and privacy policy</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="do_not_have_account">Don\'t Have an account?" "</string>
    <string name="or">OR</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="login_google">Sign in with Google</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="upload_your_profile_image">Upload your profile picture</string>
    <string name="upload">Upload</string>
    <string name="skip">Skip</string>
    <string name="invailde_name">Invalid name</string>
    <string name="invalid_user_name">Invalid user name</string>
    <string name="invalid_mail">Invalid mail</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="password_limit">Password can not be less than 6 Char</string>
    <string name="invalid_phone_number">invalid Phone Number</string>
    <string name="password_not_matched">password not matched</string>
    <string name="please_select_country">Please Select you country</string>
    <string name="select_country_not_exist">your country does not exist</string>
    <string name="email_missing">Email is missing</string>
    <string name="camera_and_location_rationale">Need camera and storage permation</string>
    <string name="saved">Saved</string>
    <string name="following">Following</string>
    <string name="campaigns">Campaigns</string>
    <string name="loading">Loading....</string>
    <string name="edit">Edit</string>
    <string name="total_photos">Total Photos</string>
    <string name="followers">Followers</string>
    <string name="home">Stories</string>
    <string name="missions">Missions</string>
    <string name="Notification">Notifications</string>
    <string name="me">Me</string>
    <string name="remind_me">REMIND ME</string>
    <string name="join">Join</string>
    <string name="tab_mission">Mission</string>
    <string name="tab_photos">Photos</string>
    <string name="days_left">Days Left</string>
    <string name="hosted_by">Hosted By</string>
    <string name="submit_ur_photo">Submit your photo</string>
    <string name="follow">Follow</string>
    <string name="search">Search</string>
    <string name="following_state">You are now following</string>
    <string name="error_following_state">Error Following User</string>
    <string name="error_login">Error login</string>
    <string name="activity_title_main">Filters</string>
    <string name="action_settings">Settings</string>
    <string name="filters">Filters</string>
    <string name="lbl_brightness">BRIGHTNESS</string>
    <string name="lbl_contrast">CONTRAST</string>
    <string name="lbl_saturation">SATURATION</string>
    <string name="tab_filters">FILTERS</string>
    <string name="tab_edit">EDIT</string>
    <string name="filter_normal">Normal</string>
    <string name="action_save">SAVE</string>
    <string name="action_open">OPEN</string>
    <string name="choose_from_your_photos">Tab On Camera button Or Choose from your Photos</string>
    <string name="back">back</string>
    <string name="next">Next</string>
    <string name="add_caption">Add caption</string>
    <string name="add_location">  Add Location</string>
    <string name="save_to_draft">  Save to exclusive</string>
    <string name="rationale_sms">Needs Locaiton to get you address</string>
    <string name="need_location_permation">Need location Permation</string>
    <string name="tag">Tags</string>
    <string name="powered_by">Powered By</string>
    <string name="add_new_tag"><font size="12">Add new Tag</font></string>
    <string name="selected_tags">Selected Tags</string>
    <string name="upload_photo">Upload photo</string>
    <string name="brand">Brand</string>
    <string name="profile">Profile</string>
    <string name="album">Album</string>
    <string name="send">Send</string>
    <string name="write_your_comment">Write your comment…</string>
    <string name="stories">Stories</string>
    <string name="brand_campaign">Brand Campaigns</string>
    <string name="about_brand">About</string>
    <string name="campaign_followed">Campaign Followed</string>
    <string name="brand_followed">Brand followed</string>
    <string name="total_sizes">Total Sizes :</string>
    <string name="sale_info">Sale Info</string>
    <string name="user_id_sale">Use id of sale to get more info</string>
    <string name="by">By :</string>
    <string name="buyer">Buyer</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="notification">Notification</string>
    <string name="select_img">Select Image</string>
    <string name="about_us">About Us :</string>
    <string name="photo_uploaded">Photo Uploaded</string>
    <string name="phone">phone</string>
    <string name="gallery">Gallery</string>
    <string name="like">Like</string>
    <string name="comment">Comments</string>
    <string name="comment_cant_not_be_null">Comment can\'t be null</string>
    <string name="result">Result</string>
    <string name="action_logout">Logout</string>
    <string name="action_edit">Edit</string>
    <string name="followed">Followed</string>
    <string name="un_follow">Unfollow</string>
    <string name="image_saved">Image saved</string>
    <string name="failed_to_save">Failed to save</string>
    <string name="failed_to_unsave">Failed to unsave</string>
    <string name="image_unsaved">Image unsaved</string>
    <string name="apply">Apply</string>
    <string name="following_number">%1$d following</string>
    <string name="error_occured">An error occurred</string>
    <string name="check_your_mail">Check your mail</string>
    <string name="username">Username</string>
    <string name="phone_2">Phone</string>
    <string name="save">Save</string>
    <string name="profile_updated_successfully">Profile updated successfully</string>
    <string name="profile_update_failed">Profile update failed</string>
    <string name="type_something_brand">Type something in the search bar to search brands.</string>
    <string name="could_not_find_brand">Sorry. We didn\'t find brands. Try typing another word.</string>
    <string name="type_something_profile">Type something in the search bar to search profiles.</string>
    <string name="could_not_find_profiles">Sorry. We didn\'t find profiles. Try typing another word.</string>
    <string name="type_something_album">Type something in the search bar to search albums.</string>
    <string name="could_not_find_albums">Sorry. We didn\'t find albums. Try typing another word.</string>
    <string name="exclusive_yes">Exclusive: yes</string>
    <string name="exclusive_no">Exclusive: no</string>
    <string name="total_sales_number">You\'ve sold %1$d photo(s)</string>
    <string name="no_sales_yet">You havn\'t sold any photos yet.</string>
    <string name="earning_price">Price: </string>
    <string name="earning_buyer">Buyer: </string>
    <string name="id_val">ID: </string>
    <string name="created_at_val">Created at : %1$s</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="view_in_cart">View in cart</string>
    <string name="login">Login</string>
    <string name="photos_number">%1$d Photo</string>
    <string name="unfollowing_state">You un-followed</string>
    <string name="days_left_value">Days Left</string>
    <string name="hosted_by_value">Hosted by %1$s</string>
    <string name="recent">Recent</string>
    <string name="old">old</string>
    <string name="earlier">Earlier</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="change_cover_picture">Change cover picture</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_photo_for_campaign">Upload photo for campaign</string>
    <string name="select_option">Select an option</string>
    <string name="select_from_photos">Select from photos</string>
    <string name="upload_new_photo">Upload new photo</string>
    <string name="phlog_uploading">Phlog is uploading your photo</string>
    <string name="phlog_finished_uploading">Phlog finished uploading your photo</string>
    <string name="caption_is_required">Caption is required</string>
    <string name="tag_is_required">Add at least one tag to your photo</string>
    <string name="upload_failed">Upload failed</string>
    <string name="done">Done</string>
    <string name="your_photo_uploaded">Photo uploaded successfully</string>
    <string name="view_in_profile">View in profile</string>
    <string name="earning_details">Earning details</string>
    <string name="selcet_photos_from_phlog">Select from saved photos in Phlog</string>
    <string name="you_havnt_uploaded_yet">You hav\'t uploaded any photos yet</string>
    <string name="photographer_hasnt_uploaded_yet">No photos yet</string>
    <string name="delete">Delete</string>
    <string name="photo">Photo</string>
    <string name="replay">replay</string>
    <string name="view_more">view more</string>
    <string name="replies">Replies</string>
    <string name="close">Close</string>
    <string name="logout_confirmation">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error_logout">An error occured. Try again later.</string>
    <string name="connection_problem_check_network">Connection error. Please, check your network.</string>
    <string name="delete_photo_confirmation">Are you sure you want to delete this photo?</string>
    <string name="confirmation">Confirmation</string>
    <string name="clear_all">Clear All</string>
    <string name="photos">Photos</string>
    <string name="campaign_still_running_prompt">Campaign\'s stills running. Photos are not available right now.</string>
    <string name="prize">Prize :</string>
    <string name="description">Description :</string>
    <string name="details">Details</string>
    <string name="no_campaigns_prompt">No campaigns available right now !</string>
    <string name="exclusive">Exclusive :</string>
    <string name="follow_this">follow this</string>
    <string name="wrong_email_format">Wrong email format</string>
    <string name="filtered_photo_desc">Phlog filtered photo</string>
    <string name="total_earning">Total Earnings: %1$d $</string>
</resources>