<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_check_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_missions"
        android:icon="@drawable/ic_check_black_24dp"
        android:title="@string/missions" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_check_black_24dp"
        android:title="@string/Notification" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_check_black_24dp"
        android:title="@string/me" />
    <!--<item-->
    <!--android:id="@+id/navigation_artists"-->
    <!--android:icon="@drawable/ic_person"-->
    <!--android:title="Artists" />-->
</menu>