<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_screen_background">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:paddingTop="42dp">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/logo_width"
                    android:layout_height="@dimen/logo_height"

                    android:src="@drawable/phlog_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp8"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sign_up_head_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp12"
                    android:text="@string/create_an_account"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sign_up_logo_sub_head"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="vertical"
                android:padding="@dimen/sign_up_container_padding">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_name"
                        android:inputType="textPersonName"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sign_up_text_size"
                        android:textStyle="bold" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                    <EditText
                        android:id="@+id/user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_name"
                        android:inputType="textPersonName"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sign_up_text_size"
                        android:textStyle="bold" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                    <EditText
                        android:id="@+id/mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mail"
                        android:inputType="textEmailAddress"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sign_up_text_size"
                        android:textStyle="bold" />
                </android.support.design.widget.TextInputLayout>
                <!--android.support.design:hintAnimationEnabled="true"-->
                <!--android.support.design:hintEnabled="true"-->

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                    <EditText
                        android:id="@+id/register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sign_up_text_size"
                        android:textStyle="bold" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                    <EditText
                        android:id="@+id/confirm_register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sign_up_text_size"
                        android:textStyle="bold" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                    <EditText
                        android:id="@+id/mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile"
                        android:inputType="phone"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sign_up_text_size"
                        android:textStyle="bold" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                    <EditText
                        android:id="@+id/country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/country"
                        android:inputType="textAutoComplete"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sign_up_text_size"
                        android:textStyle="bold" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp22"
                    android:layout_marginTop="@dimen/dp22"
                    android:orientation="horizontal">


                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/sign_up_btn_size"
                        android:layout_margin="@dimen/dp8"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_cancel_btn"
                        android:text="@string/cancel"
                        android:textColor="@color/gray96A0AA"
                        android:textSize="@dimen/sign_up_text_size_meduim" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/sign_up_btn_size"
                        android:layout_margin="@dimen/dp8"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_sign_up_btn"
                        android:text="@string/sign_up"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sign_up_text_size_meduim" />

                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/dp12"
                    android:paddingEnd="@dimen/dp12"
                    android:paddingStart="@dimen/dp12"
                    android:text="@string/sign_up_terms_notifier"
                    android:textAlignment="textStart" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>