<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/upload_background"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom"
            android:fontFamily="@font/segoe_b"
            android:text="@string/upload_your_profile_image"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold" />


        <FrameLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:background="@drawable/select_image_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView

                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp65"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_upload" />

                <com.example.softmills.phlog.base.widgets.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_img"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_medium" />

            </LinearLayout>

            <ImageView
                android:id="@+id/pick_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="@dimen/dp4" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="top|center"
            android:orientation="vertical">

            <Button
                android:id="@+id/upload_profile_btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp12"
                android:fontFamily="@font/segoe_sb"
                android:background="@drawable/rounded_upload_image_btn"
                android:text="@string/upload"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/skip_upload_btn"
                android:layout_width="200dp"
                android:fontFamily="@font/segoe_sb"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_skip_btn"
                android:text="@string/skip"
                android:textColor="@color/white" />

        </LinearLayout>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/upload_profile_img_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</FrameLayout>